--- a/wandao.tt
+++ b/wandao.tt
@@ -20,6 +20,8 @@
 /ac {^【传闻} {/line {log} ../newwandao.log}
 /ac {^%1回答%2：} {/line {log} ../newwandao.log}
 /ac {^%1(%2)告诉你：} {/line {log} ../newwandao.log}
+/ac {^你告诉} {/line {log} ../newwandao.log}
+/ac {^你回答} {/line {log} ../newwandao.log}
 /read comm/gag.sc
 /read comm/normal.sc
 /read comm/path.sc
@@ -354,3 +356,5 @@
 /ac {^  小弯刀的尸体(Corpse)}{wh}{4}
 /ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{de1 {wpet;do gongji $target,kill $target}}}
 /ac {^你所选用的武功中没有这种必杀技}{take 8 200;wi needle}
+/ac {^139级以后你可以通过给我10～17两黄金}{de2 {m1to 3}}
+/al em {entermaze1}
