--- a/wandao.tt
+++ b/wandao.tt
@@ -31,6 +31,7 @@
 /read comm/pet.sc
 /read comm/autorecover_hc.sc
 /read comm/juezhao.sc
+/al juezhao {;}
 /var jqs_lost_limit 0.1
 /al hx {drink dai}
 /ac {^沁骨的冰凉流入喉咙}{stopk;de2 cks}
@@ -112,7 +113,7 @@
         de1 {buff};
         /delay {4.2}{
             hpp;
-           /if {$shaqi>0 || $bgok_t==1}{bg}{ld;juezhao};
+           /if {$shaqi>0 || $bgok_t==1}{bg}{ld};
             do gongji %0,kill %0;
             startk;
                     };
@@ -126,8 +127,7 @@
 /al startk {
         /ticker {kill}{
         /if {$is_fight==0}{
-            pj;
-            wh;
+           /delay {3}{pj;wh;};
             }
             buff;
             wwk;
@@ -212,9 +212,9 @@
     /var bgok_t 0;
     /delay {121}{/var bgok_t 1};
     /delay {2.5}{/if {$shaqi>0}{bg}{
-                                    /if {$myok==1}{my}{ld;juezhao};
+                                    /if {$myok==1}{my}{ld;};
                                     };
-                /if {$qieok==1 || $qieok_t ==1}{qie;juezhao};
+                /if {$qieok==1 || $qieok_t ==1}{qie;};
                   /showme {------shaqi=$shaqi};
                  };
 }{4}
@@ -231,7 +231,7 @@
 /ac {^设定环境变数：secon_perform = "hyakki"}{
     /delay {checkbg} {
                 /if {$is_kill==1}{
-                /if {$shaqi>0 || $bgok_t==1}{bg}{/if {$myok==1}{my}{ld;juezhao};};
+                /if {$shaqi>0 || $bgok_t==1}{bg}{/if {$myok==1}{my}{ld;};};
                         };
                         }{9.1}
             
@@ -245,7 +245,7 @@
     /delay {60.2}{/var qieok_t 1};
     bg;
     /delay {2.1} {/if {$shaqi>0 || $bgok_t ==1}{bg}{
-                                    /if {$myok==1}{my}{ld;juezhao};
+                                    /if {$myok==1}{my}{ld;};
                                     };
                   /showme {------shaqi=$shaqi};
                  };
@@ -266,6 +266,7 @@
             /var flok 1;
             /var bpjbok 1;
             /var wfok 1;
+            get sword;
             }
 /ac {^你的法力太低}{hp}
 /ac {^( 你似乎十分疲惫}{wf}
@@ -351,6 +352,7 @@
 /al kb {ki bandit;/delay {4}{do kill bandit 2,kill bandit 3,kill bandit 4,kill bandit leader}}
 /ac {^『风漏飞烟』至少需要6枚暗器。}{take 8 1000;de1 wianqi}
 /ac {^星芒流绕在}{pjj;qx}
+/ac {^星芒流绕在}{pjuezhao}
 /ac {^你现在不可以吹口哨。}{}
 /ac {^你对%1一指，对小弯刀命令}{/if {$is_kill==0}{startk}}
 /ac {^  小弯刀的尸体(Corpse)}{wh}{4}
@@ -358,3 +360,4 @@
 /ac {^你所选用的武功中没有这种必杀技}{take 8 200;wi needle}
 /ac {^139级以后你可以通过给我10～17两黄金}{de2 {m1to 3}}
 /al em {entermaze1}
+/ac {^此人已经在极度忙乱中了（>3）}{pjuezhao}
