--- a/wandao.tt
+++ b/wandao.tt
@@ -53,7 +53,7 @@
 /ac {^小弯刀左手虚握，形成一团奇冷}{/var haspet 1;/var haspj 1}
 /ac {^但是被%1机灵地躲开了。}{/var haspj 1;/var haspet 1;de5 {/var haspj 0;pj;pjj};}
 /ac {^但是被%1机灵地躲开了。}{/var haspj 1;/var haspet 1;de4 {/var haspj 0;};}
-/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;ffl;de4 {/var haspj 0};/delay {4}{pk};/showme ============ freeze ===========}
+/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;pjuezhao;de4 {/var haspj 0};/delay {4}{pk};/showme ============ freeze ===========}
 /var hasblade 0
 /var hasanqi 0
 /var hashand 0
@@ -107,7 +107,7 @@
         wh;
         /var haspj 0;
         /var is_walk 0;
-        do i,set target %0;
+        do ability2,i,set target %0;
         cks;wianqi;
         /var target %0;
         de1 {buff};
@@ -127,7 +127,7 @@
 /al startk {
         /ticker {kill}{
         /if {$is_fight==0}{
-           /delay {3}{pj;wh;};
+           /delay {2}{pj;wh;};
             }
             buff;
             wwk;
@@ -266,7 +266,7 @@
             /var flok 1;
             /var bpjbok 1;
             /var wfok 1;
-            get sword;
+            get needle;
             }
 /ac {^你的法力太低}{hp}
 /ac {^( 你似乎十分疲惫}{wf}
@@ -352,7 +352,7 @@
 /al kb {ki bandit;/delay {4}{do kill bandit 2,kill bandit 3,kill bandit 4,kill bandit leader}}
 /ac {^『风漏飞烟』至少需要6枚暗器。}{take 8 1000;de1 wianqi}
 /ac {^星芒流绕在}{pjj;qx}
-/ac {^星芒流绕在}{pjuezhao}
+/ac {^星芒流绕在}{pjuezhao2}
 /ac {^你现在不可以吹口哨。}{}
 /ac {^你对%1一指，对小弯刀命令}{/if {$is_kill==0}{startk}}
 /ac {^  小弯刀的尸体(Corpse)}{wh}{4}
@@ -360,4 +360,6 @@
 /ac {^你所选用的武功中没有这种必杀技}{take 8 200;wi needle}
 /ac {^139级以后你可以通过给我10～17两黄金}{de2 {m1to 3}}
 /al em {entermaze1}
-/ac {^此人已经在极度忙乱中了（>3）}{pjuezhao}
+/ac {^此人已经在极度忙乱中了（>3）}{pjuezhao2}
+/ac {^你捡起一把仙人刺。}{i}
+/al widef {wianqi}
