--- a/claw.tt
+++ b/claw.tt
@@ -149,7 +149,7 @@
             /nop pj;wh;
             };
         /math ticks {1+$ticks};
-        /delay {0.1}{/showme  =============================================== tick == $ticks ==};
+        /showme  =============================================== tick == $ticks ==;
             }{4.1}
             }
 /nop 『棋盘切』（gobankiri）
@@ -287,7 +287,7 @@
 /ac {^你脸上神色惨然，猛一咬牙}{
     /var yrcyok 0;
     de1 cks;
-    /delay {150}{/var yrcyok 1};
+    /delay {90}{/var yrcyok 1};
     /if {{$qieok==1 || $qieok_t ==1} && $qienpc==0}{qie}{
             /if {$shaqi>0 || $bgok_t==1}{bg}{slcx;};
                                     };
@@ -417,3 +417,4 @@
 /ac {^139级以后你可以通过给我10～17两黄金}{de2 {m1to 7}}
 /al em {entermaze1}
 /ac {^你身上没有这样东西}{get sword}
+/al widef {wi sword;slcx}
