--- a/stick.tt
+++ b/stick.tt
@@ -18,7 +18,6 @@
 /al wiblade {/if {$blade==0||$hand==1||$sword==1||$staff==1}{do unwield all,wield zhufu blade,wield blade2}}
 /al wihand {/if {$hand==0||$blade==1||$staff==1||$sword==1}{do unwield all,wield jade}}
 /al wiw wistaff
-/al widef wistaff
 /al isblade {/var blade 1;/var staff 0;/var sword 0;/var hand 0;/showme isblade;enable parry ittouryu}
 /al isblade {/var blade 1;/var staff 0;/var sword 0;/var hand 0;/showme isblade;}
 /al noblade {/var blade 0; /showme noblade;}
@@ -76,6 +75,7 @@
 /ac {^小小棍纵身越到了}{pj}
 /ac {^小小棍一招不慎，露出了好大的一个破绽！！！$}{de4 pj}
 /ac {^你悄悄走到%1背后，飞身纵起}{de2 iskill;gongji $target}
+/ac {^你悄悄走到%1背后，飞身纵起}{de2 iskill}
 /ac {^小小棍不知从哪里窜到你面前}{/if {$is_kill==1}{juji $target}}
 /al wpet {order wear all}
 /al buff {wh;perform dodge.gouweixudiao}
@@ -89,7 +89,7 @@
         /var target %0;/var target %0;juji %0;
         /delay {2}{juji %0;kill %0;startk}}
 /al ki {
-        wistaff;buff;set target %0;
+        wistaff;buff;do ability2,i,set target %0;
         /var target %0;juji %0;
         /delay {2}{kill %0;startk}}
 /ac {^你对著%0！今日不是你死就是我活！} {iskill}
@@ -202,7 +202,7 @@
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{}
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{sk;perform dodge.goujitiaoqiang}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{sk}
-/ac {^你所选用的武功中没有这种必杀技。}{get jade;get staff}
+/ac {^你所选用的武功中没有这种必杀技。}{get staff}
 /ac {^使用特殊招式至少需要50点的内力}{hp}
 /read comm/gag.sc
 /read comm/path.sc
@@ -262,6 +262,7 @@
 /ac {^看起来%0想杀死你！$}{
         /nop look;
         startk;
+        zh;
        /nop xixi $petname;
         /nop delay {pet}{/showme checkpet--}{2};
         }
@@ -275,7 +276,8 @@
 /ac {^只好任%1落在一边。}{/showme todo }
 /ac {^你只觉得虎口一热，手中的神之祝福宝刀}{noblade}
 /al checkkill {perform blade.gobankiri}
-/ac {^然而，%1已经死了}{ch $target;checkkill;fd;/if {$is_kill==1}{;};}
+/ac {^然而，%1已经死了}{ch $target;checkkill;/if {$is_kill==1}{;};}
+/ac {^然而，%1已经死了}{ch $target;tzj}
 /ac {^你现在不可以吹口哨。}{}
 /ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{wpet;gongji $target;juji $target}}
 /var whok 1
@@ -286,3 +288,4 @@
 /ac {^当前在战斗中的憎恨最多对象：0}{;}
 /ac {^当前在战斗中的憎恨最多对象：/obj/target/pet#%1 ("小小棍")}{juji $target}
 /al bbb {do burn,burn,burn;ab + 14}
+/al widef wistaff
