--- a/offical.tt
+++ b/offical.tt
@@ -72,3 +72,4 @@
 /ac {^你对%1一指，对小公务员命令}{kill $target}
 /ac {^  小公务员的尸体(Corpse)}{wh}{4}
 /ac {^你轻轻地吹了声口哨。}{/if {$is_kill==1}{de1 {wpet;gongji $target}}}
+/ac {递给你一张怜花宝籍碎页。}{do give duan book,give duan book}
